data/all_generated_tests/raw_wast_tests/nop_InvalidorInconsistentControlFlowGraph_559.wast
;; 10. **`nop` in Exception Handling**:    - Use `nop` inside try-catch constructs (if the WebAssembly implementations support exceptions). Validate CFG consistency, ensuring exception paths are appropriately handled.    - Constraint: Observes ‘nop’ instructions' effect on exception handling control flow without side-effects on CFG.

(assert_invalid
  (module 
    (func 
      try 
        (nop)
      catch)
    )
  "invalid exception handling structure"
)